# Insightface-NPU

./: .gitignore  README.md  settings.gradle
.github/workflows/: codeql-analysis.yml
app/: build.gradle
app/src/androidTest/java/com/oal/insightface/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scrfd_2.5g_bnkps_uint8.tmfile
app/src/main/java/com/oal/insightface/: FaceActivity.java  FaceCameraxActivity.java  FaceTengine.java  MainActivity.java
app/src/main/java/com/oal/insightface/utils/: FileUtils.java  PermissionUtils.java
app/src/main/jni/: CMakeLists.txt  facetengine.cpp  ndkcamera.cpp  region.hpp
app/src/main/jni/algorithm/: scrfd.cc  scrfd.hpp
app/src/main/jni/include/: ndkcamera.h
app/src/main/jni/include/image/: ImageRotate.cpp  ImageRotate.h  YuvConverter.cpp  YuvConverter.h
app/src/main/jni/opencv-mobile-3.4.15-android/sdk/native/jni/abi-x86/: OpenCVConfig.cmake
app/src/main/jni/opencv-mobile-3.4.15-android/sdk/native/jni/include/opencv2/core/: bindings_utils.hpp
app/src/main/jni/tengine/include/: timvx_device.h
app/src/main/jni/utility/: affine.cc  affine.hpp  nms.cc  nms.hpp  timer.cc  timer.hpp
app/src/main/res/layout/: activity_face.xml  activity_face_camerax.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/oal/insightface/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
